## Process this file with automake to produce Makefile.in
#
bin_PROGRAMS = cdo
#
noinst_PROGRAMS = cdotest
#
cdo_SOURCES = Arith.c		\
	      Arithc.c 		\
	      Arithdays.c 	\
	      Arithlat.c        \
	      Cat.c		\
	      CDItest.c		\
	      Change.c		\
	      Change_e5slm.c	\
	      Comp.c 		\
	      Compc.c 		\
	      Cond.c 		\
	      Cond2.c 		\
	      Condc.c 		\
	      Copy.c		\
              Del29feb.c	\
              Detrend.c		\
              Diff.c		\
              Echam5ini.c     	\
              Enlarge.c     	\
              Enlargegrid.c     \
              Ensstat.c     	\
              Eofcoeff.c     	\
              Exprf.c     	\
              Filedes.c 	\
              Fillmiss.c 	\
              Filter.c 		\
              Fldrms.c 		\
              Fldstat.c 	\
              Gengrid.c 	\
              Gradsdes.c 	\
              Gridboxstat.c 	\
              Gridcell.c 	\
              Harmonic.c 	\
              Histogram.c 	\
              Importamsr.c  	\
              Importbinary.c  	\
              Importcmsaf.c  	\
              Importobs.c  	\
              Info.c		\
              Input.c		\
              Intgrid.c 	\
              Intgridtraj.c 	\
              Intlevel.c 	\
              Inttime.c 	\
              Intntime.c 	\
              Intyear.c 	\
              Invert.c  	\
              Invertlev.c  	\
              Log.c  	        \
              Maskbox.c 	\
              Mastrfu.c 	\
              Math.c   		\
              Merge.c   	\
              Mergegrid.c   	\
              Mergetime.c   	\
              Merstat.c   	\
              Monarith.c        \
              Mrotuv.c	 	\
              Mrotuvb.c	 	\
              Ninfo.c 		\
              Nmltest.c 	\
              Output.c  	\
              Outputgmt.c  	\
              Pinfo.c  	        \
              Pressure.c  	\
              Regres.c  	\
              Remap.c  	        \
              Remapeta.c    	\
              Replace.c  	\
              Rotuv.c     	\
              Runpctl.c  	\
              Runstat.c  	\
              Seascount.c 	\
              Seaspctl.c 	\
              Seasstat.c 	\
              Selbox.c  	\
              Select.c  	\
              Select2.c  	\
              Seloperator.c  	\
              Selrec.c  	\
              Seltime.c 	\
	      Set.c		\
	      Setbox.c		\
	      Setgatt.c		\
	      Setgrid.c		\
	      Sethalo.c		\
              Setmiss.c 	\
              Setrange.c 	\
              Setrcaname.c 	\
	      Settime.c		\
	      Setzaxis.c	\
              Showinfo.c	\
              Sinfo.c   	\
              Smooth9.c   	\
              Sort.c      	\
              Specinfo.c	\
              Spectral.c	\
              Spectrum.c	\
              Split.c   	\
              Splitrec.c 	\
              Splitsel.c 	\
              Splittime.c 	\
              Splityear.c 	\
              Subtrend.c        \
              Templates.c    	\
              Test.c    	\
              Tests.c    	\
              Timcount.c 	\
              Timeof.c 		\
              Timpctl.c 	\
              Timsort.c 	\
              Timselpctl.c 	\
              Timselstat.c 	\
              Timstat.c 	\
              Timstat2.c 	\
              Timstat3.c 	\
              Tinfo.c 		\
              Transpose.c  	\
              Trend.c  		\
              Trms.c  		\
              Vardup.c  	\
              Vargen.c  	\
              Varrms.c  	\
              Vertint.c 	\
              Vertstat.c 	\
              Vertwind.c 	\
              Wind.c         	\
              Writegrid.c 	\
              Writerandom.c 	\
              Yhourstat.c  	\
              Ydaypctl.c  	\
              Ydaystat.c  	\
              Ydrunpctl.c  	\
              Ydrunstat.c  	\
	      Ymonarith.c       \
              Ymonpctl.c  	\
              Ymonstat.c  	\
              Yseaspctl.c  	\
              Yseasstat.c  	\
              Zonstat.c 	\
	      cdilib.c 		\
              commandline.c 	\
              exception.c 	\
              expr_yacc.h 	\
              expr_yacc.c 	\
              expr_lex.c 	\
              expr.c 		\
              expr.h 		\
              cdo.c		\
              cdo_pthread.c 	\
              cdo_vlist.c 	\
              field.c 		\
              fieldc.c 		\
              field2.c		\
              fieldmer.c  	\
              fieldzon.c  	\
              gradsdeslib.c     \
              gradsdeslib.h     \
              grid.c		\
              grid.h		\
              grid_gme.c	\
              grid_lcc.c	\
              grid_rot.c	\
              griddes.c		\
              griddes.h		\
              griddes_nc.c	\
              griddes_h5.c	\
              hetaeta.c		\
              history.c		\
              institution.c 	\
              interpol.c 	\
              job.c 	  	\
              modules.c		\
              namelist.c 	\
              normal.c		\
              pipe.c		\
              process.c 	\
              remaplib.c     	\
              timer.c   	\
              realtime.c   	\
              pstream.c		\
              table.c		\
              userlog.c 	\
              util.c		\
              legendre.c 	\
              fourier.c  	\
	      specspace.c 	\
              readline.c  	\
              juldate.c  	\
              vinterp.c		\
              zaxis.c  		\
	      printinfo.h 	\
	      par_io.c 	        \
	      par_io.h 	        \
	      pthread_debug.c 	\
	      pthread_debug.h 	\
	      color.c 	        \
	      color.h 	        \
	      list.c 	        \
	      list.h 	        \
              field.h		\
              dmemory.h		\
              dtypes.h		\
              error.h		\
              functs.h		\
              cdo.h		\
              cdo_int.h		\
              interpol.h 	\
              operator_help.h 	\
              modules.h		\
              remap.h           \
              pipe.h		\
              process.h		\
              pstream.h		\
              pstream_int.h	\
              specspace.h 	\
              vinterp.h 	\
              namelist.h 	\
              util.h		\
              timebase.h	\
              etopo.h		\
              percentiles.c	\
              percentiles.h	\
              nth_element.c	\
              nth_element.h	\
	      ecacore.h		\
	      ecacore.c		\
	      ecautil.h		\
	      ecautil.c		\
	      EcaIndices.c	\
	      Hi.c		\
	      Wct.c             \
	      statistic.c       \
	      statistic.h       \
	      cdi.h
#
#cdo_LDADD = $(LDFLAGS) -lm
#
#cdotest_LDADD = $(LDFLAGS) -lm
#
cdotest_SOURCES = cdi.h 	\
		  cdilib.c 	\
		  cdo_int.h 	\
		  cdotest.c
#
userlog.o: userlog.c config.h
	$(COMPILE) -DLOGPATH=${exec_prefix}/log -c `test -f '$<' || echo '$(srcdir)/'`$<
#
CLEANFILES  = `ls *~`
