## Process this file with automake to produce Makefile.in
#
bin_PROGRAMS = cdo
#
cdo_SOURCES  = cdo.c
cdo_SOURCES += Arith.c         \
               Arithc.c        \
               Arithdays.c     \
               Arithlat.c      \
               CDItest.c       \
               Cat.c           \
               Change.c        \
               Change_e5slm.c  \
               Cloudlayer.c    \
               Command.c       \
               Comp.c          \
               Compc.c         \
               Complextorect.c \
               Cond.c          \
               Cond2.c         \
               Condc.c         \
               Consecstat.c    \
               Copy.c          \
               Deltime.c       \
               Derivepar.c     \
               Detrend.c       \
               Diff.c          \
               Duplicate.c     \
               EOFs.c          \
	       Eof3d.c         \
               EcaIndices.c    \
               Echam5ini.c     \
               Enlarge.c       \
               Enlargegrid.c   \
               Ensstat.c       \
               Ensstat3.c      \
               Ensval.c        \
               Eofcoeff.c      \
	       Eofcoeff3d.c    \
               Exprf.c         \
               FC.c            \
               Filedes.c       \
               Fillmiss.c      \
               Filter.c        \
               Fldrms.c        \
               Fldstat.c       \
               Fldstat2.c      \
               Fourier.c       \
               Gather.c        \
               Gengrid.c       \
               Gradsdes.c      \
               Gridboxstat.c   \
               Gridcell.c      \
               Harmonic.c      \
               Hi.c            \
               Histogram.c     \
               IFS2ICON.c      \
               Importamsr.c    \
               Importbinary.c  \
               Importcmsaf.c   \
               Importobs.c     \
               Info.c          \
               Input.c         \
               Intgrid.c       \
               Intgridtraj.c   \
               Intlevel.c      \
               Intlevel3d.c    \
               Intntime.c      \
               Inttime.c       \
               Intyear.c       \
               Invert.c        \
               Invertlev.c     \
               Isosurface.c    \
               Log.c           \
               Maskbox.c       \
               Mastrfu.c       \
               Math.c          \
               Merge.c         \
               Mergegrid.c     \
               Mergetime.c     \
               Merstat.c       \
               Monarith.c      \
               Mrotuv.c        \
               Mrotuvb.c       \
               Ninfo.c         \
               Nmltest.c       \
               Output.c        \
               Outputgmt.c     \
               Pinfo.c         \
               Pressure.c      \
               Regres.c        \
               Remap.c         \
               Remapeta.c      \
               Replace.c       \
               Replacevalues.c \
               Rotuv.c         \
               Runpctl.c       \
               Runstat.c       \
               Scatter.c       \
               Seascount.c     \
               Seaspctl.c      \
               Seasstat.c      \
               Selbox.c        \
               Select.c        \
               Seloperator.c   \
               Selrec.c        \
               Seltime.c       \
               Selvar.c        \
               Set.c           \
               Setbox.c        \
               Setgatt.c       \
               Setgrid.c       \
               Sethalo.c       \
               Setmiss.c       \
               Setrcaname.c    \
               Settime.c       \
               Setzaxis.c      \
               Showinfo.c      \
               Sinfo.c         \
               Smooth9.c       \
               Sort.c          \
               Sorttimestamp.c \
               Specinfo.c      \
               Spectral.c      \
               Spectrum.c      \
               Split.c         \
               Splitrec.c      \
               Splitsel.c      \
               Splittime.c     \
               Splityear.c     \
               Subtrend.c      \
               Templates.c     \
               Test.c          \
               Tests.c         \
               Timcount.c      \
               Timpctl.c       \
               Timselpctl.c    \
               Timselstat.c    \
               Timsort.c       \
               Timstat.c       \
               Timstat2.c      \
               Timstat3.c      \
               Tinfo.c         \
               Tocomplex.c     \
               Transpose.c     \
               Trend.c         \
               Trms.c          \
               Tstepcount.c    \
               Vardup.c        \
               Vargen.c        \
               Varrms.c        \
               Vertint.c       \
               Vertstat.c      \
               Vertwind.c      \
               Wct.c           \
               Wind.c          \
               Writegrid.c     \
               Writerandom.c   \
               Ydayarith.c     \
               Ydaypctl.c      \
               Ydaystat.c      \
               Ydrunpctl.c     \
               Ydrunstat.c     \
               Yhourstat.c     \
               Ymonarith.c     \
               Ymonpctl.c      \
               Ymonstat.c      \
               Yseaspctl.c     \
               Yseasstat.c     \
               Zonstat.c       \
               cdo.h           \
               cdo_int.h       \
               cdo_pthread.c   \
               cdo_vlist.c     \
               color.c         \
               color.h         \
               commandline.c   \
               counter.h       \
               dmemory.h       \
               dtypes.h        \
               ecacore.c       \
               ecacore.h       \
               ecautil.c       \
               ecautil.h       \
               error.h         \
               etopo.h         \
               temp.h          \
               mask.h          \
               exception.c     \
               expr.c          \
               expr.h          \
               expr_lex.c      \
               expr_yacc.c     \
               expr_yacc.h     \
               field.c         \
               field.h         \
               field2.c        \
               fieldc.c        \
               fieldmem.c      \
               fieldmer.c      \
               fieldzon.c      \
               fouriertrans.c  \
               functs.h        \
               gradsdeslib.c   \
               gradsdeslib.h   \
               grid.c          \
               grid.h          \
               grid_gme.c      \
               grid_lcc.c      \
               grid_rot.c      \
               griddes.c       \
               griddes.h       \
               griddes_h5.c    \
               griddes_nc.c    \
               hetaeta.c       \
               hetaeta.h       \
               history.c       \
               institution.c   \
               interpol.c      \
               interpol.h      \
               job.c           \
               juldate.c       \
               legendre.c      \
               list.c          \
               list.h          \
	       merge_sort2.c   \
	       merge_sort2.h   \
               modules.c       \
               modules.h       \
               namelist.c      \
               namelist.h      \
               normal.c        \
               nth_element.c   \
               nth_element.h   \
               operator_help.h \
               par_io.c        \
               par_io.h        \
               percentiles.c   \
               percentiles.h   \
               pipe.c          \
               pipe.h          \
               printinfo.h     \
               process.c       \
               process.h       \
               pstream.c       \
               pstream.h       \
               pstream_int.h   \
               pthread_debug.c \
               pthread_debug.h \
               readline.c      \
               realtime.c      \
               remap.h         \
               remaplib.c      \
               specspace.c     \
               specspace.h     \
               statistic.c     \
               statistic.h     \
               table.c         \
               timebase.h      \
               timer.c         \
               userlog.c       \
               util.c          \
               util.h          \
               vinterp.c       \
               vinterp.h       \
               zaxis.c

cdo_CPPFLAGS = -I$(top_srcdir)/libcdi/src
cdo_LDADD    = $(top_builddir)/libcdi/src/libcdi.la
cdo_LDFLAGS  =

if ENABLE_ALL_STATIC
cdo_LDFLAGS  += -all-static
endif

noinst_PROGRAMS  = cdotest
cdotest_SOURCES  = cdo_int.h	\
	           cdotest.c
cdotest_LDADD    = $(cdo_LDADD)
cdotest_CPPFLAGS = $(cdo_CPPFLAGS)
cdotest_LDFLAGS  = $(cdo_LDFLAGS)
if ENABLE_ALL_STATIC
cdotest_LDFLAGS  += -all-static
endif

cdo-userlog.o: userlog.c config.h
	$(COMPILE) -DLOGPATH=${exec_prefix}/log -c -o cdo-userlog.o `test -f 'userlog.c' || echo '$(srcdir)/'`userlog.c
cdo_static-userlog.o: userlog.c config.h
	$(COMPILE) -DLOGPATH=${exec_prefix}/log -c -o cdo_static-userlog.o `test -f 'userlog.c' || echo '$(srcdir)/'`userlog.c
#
CLEANFILES  = `ls *~`
